preventing .hourslice from covering gray lines

--- a/public/stylesheets/calendar-day.css
+++ b/public/stylesheets/calendar-day.css
@@ -100,6 +100,8 @@
     
   .hourslice {
     height: 15px;
+    z-index: -100;
+    position: relative;
   }
   
   .hourslice-last {
